--- a/css/solutions.css
+++ b/css/solutions.css
@@ -1909,6 +1909,18 @@ h1 {
     line-height: 8rem;
     margin-bottom: 2rem
 }
+@media (min-width: 320px) {
+    h1 {
+        color: #fff;
+        font-family: Agrandir, sans-serif;
+        font-size: 35px;
+        font-weight: 400;
+        letter-spacing: -.48px;
+        line-height: 48px;
+        margin-bottom: 2rem
+    }
+    
+}
 
 @media (min-width: 1440px) {
     h1 {
@@ -1982,9 +1994,6 @@ h1 {
     }
 }
 
-h1 span {
-    color: #00e2c5
-}
 
 .dark-bg h1 {
     color: #fff
@@ -2589,12 +2598,12 @@ ul li:before {
         top: 20px
     }
 }
-
+/* 
 h1 span,
 h2 span,
 h3 span {
     color: #00e2c5
-}
+} */
 
 img {
     max-width: 100%
@@ -3075,6 +3084,20 @@ body.inquiry-page .scrollBar {
     transition: all .3s linear;
     width: 100%;
     z-index: 50
+}
+@media (min-width: 320px) {
+    .header {
+        height: auto;
+        left: auto !important;
+        margin: 26px 0rem 0 0;
+        padding: 0;
+        position: fixed;
+        right: 0;
+        top: 0;
+        transition: all .3s linear;
+        width: 100%;
+        z-index: 50;
+    }
 }
 
 @media (min-width: 1025px) {
@@ -26686,7 +26709,12 @@ a:where(:not(.wp-element-button)) {
     position: absolute;
     top: 10%;
 }
+@media (min-width:320px) {
+    .video-container {
+        top: 19%;
+    }
 
+}
 @media (min-width:425px) {
     .video-container {
         top: 15%;
@@ -26699,7 +26727,13 @@ a:where(:not(.wp-element-button)) {
         top: 11%;
     }
 }
-
+@media (min-width:320px) {
+    .cs-slider__content {
+        align-items: center;
+        display: flex;
+        gap: 0px;
+    }
+}
 @media (min-width:425px) {
     .cs-slider__content {
         align-items: center;
@@ -26774,9 +26808,8 @@ a:where(:not(.wp-element-button)) {
     z-index: 1;
 }
 
-#text-anim span:first-child::after {
+#text-anim span:second-child::after {
     content: "|";
-    /* Yozish indikator (cursor) */
     animation: blink 0.7s infinite;
 }
 
@@ -26785,7 +26818,9 @@ a:where(:not(.wp-element-button)) {
         opacity: 0;
     }
 }
-
+#text__changer{
+    color: #00e2c5;
+}
 .logo {
     height: 120px;
 }
