--- a/css/style.css
+++ b/css/style.css
@@ -1909,6 +1909,7 @@ h1 {
     line-height: 7rem;
     margin-bottom: 2rem
 }
+
 @media (min-width: 320px) {
     h1 {
         font-size: 35px;
@@ -4755,7 +4756,8 @@ html.has-scroll-smooth {
     backface-visibility: hidden;
     transform: translateZ(0)
 }
-.btn-cta{
+
+.btn-cta {
     margin-left: 82px;
 }
 
@@ -11131,12 +11133,6 @@ html :where(.is-position-sticky) {
     transform: translate3d(0px, 0px, 0px) !important;
 }
 
-.client {
-    width: 130px;
-    height: 100px;
-    object-fit: contain;
-}
-
 .client2 {
     width: 130px;
     height: 100px;
@@ -11213,9 +11209,10 @@ html :where(.is-position-sticky) {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 25px;
 }
 
-.brand__slider-img-cont {
+/* .brand__slider-img-cont {
     align-items: center;
     display: flex !important;
     height: 50px;
@@ -11229,7 +11226,7 @@ html :where(.is-position-sticky) {
         margin: 23px;
         width: 100%;
     }
-}
+} */
 
 .brand__slider .owl-stage-outer {
     overflow: visible !important
@@ -12144,6 +12141,7 @@ html :where(.is-position-sticky) {
         padding: 10rem 0
     }
 }
+
 @media (min-width: 1370px) {
     .masthead {
         padding: 10rem 0
@@ -12237,18 +12235,21 @@ html :where(.is-position-sticky) {
 .masthead h1 {
     text-align: center
 }
+
 @media (min-width:320px) {
     .masthead h1 {
         text-align: left;
     }
-    
+
 }
+
 @media (min-width:768px) {
     .masthead h1 {
         text-align: center;
     }
-    
+
 }
+
 .masthead__hover-slider {
     margin-left: calc(-50vw + 50%);
     position: relative;
@@ -26554,16 +26555,19 @@ a:where(:not(.wp-element-button)) {
     width: 120px;
     cursor: pointer;
 }
+
 @media (min-width:320px) {
     .language-selector {
         display: none;
     }
 }
+
 @media (min-width:768px) {
     .language-selector {
         display: flex;
     }
 }
+
 .selected-lang {
     display: flex;
     align-items: center;
@@ -26657,6 +26661,7 @@ a:where(:not(.wp-element-button)) {
     left: 10%;
     z-index: 1;
 }
+
 @media (min-width:320px) {
     .possition {
         position: absolute;
@@ -26665,6 +26670,7 @@ a:where(:not(.wp-element-button)) {
         z-index: 1;
     }
 }
+
 .relative {
     position: relative;
 }
@@ -26673,6 +26679,7 @@ a:where(:not(.wp-element-button)) {
     display: flex;
     flex-direction: column;
 }
+
 .language-selector {
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
@@ -26680,4 +26687,74 @@ a:where(:not(.wp-element-button)) {
 .hidden {
     opacity: 0;
     visibility: hidden;
+}
+
+.masthead__video {
+    width: 100%;
+}
+
+.air {
+    background: url(../img/air.svg)center / cover no-repeat;
+    width: 200px;
+    height: 45px;
+}
+
+.nnmc {
+    background: url(../img/nnmc.svg)center / cover no-repeat;
+    width: 200px;
+    height: 45px;
+}
+
+.uzbnf {
+    background: url(../img/uzbneftgaz.svg)center / cover no-repeat;
+    width: 295px;
+    height: 75px;
+}
+
+.cntbank {
+    background: url(../img/centralbank.svg)center / cover no-repeat;
+    width: 295px;
+    height: 55px;
+}
+
+.wmpc {
+    background: url(../img/worldmed.svg)center / cover no-repeat;
+    width: 270px;
+    height: 60px;
+}
+
+.usaid {
+    background: url(../img/usaid.svg)center / cover no-repeat;
+    width: 220px;
+    height: 60px;
+}
+
+.osce {
+    background: url(../img/osce.svg)center / cover no-repeat;
+    width: 200px;
+    height: 45px;
+}
+
+.mtrpl {
+    background: url(../img/mtrpl.svg)center / cover no-repeat;
+    width: 110px;
+    height: 100px;
+}
+
+.agmk {
+    background: url(../img/agmk.svg)center / cover no-repeat;
+    width: 70px;
+    height: 110px;
+}
+
+.trbn {
+    background: url(../img/trbn.svg)center / cover no-repeat;
+    width: 400px;
+    height: 75px;
+}
+
+.pisa {
+    background: url(../img/pisa.svg)center / cover no-repeat;
+    width: 190px;
+    height: 140px;
 }
